--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -90,9 +90,6 @@ header {
   align-items: center;
   padding: 0 1%;
   margin-bottom: 50px;
-}
-
-header {
   text-align: center;
   font-size: 14px;
   padding: 0px 0 150px;
@@ -105,7 +102,9 @@ header {
 header a {
   color: white;
   margin: 20px;
-  font-size: 20px;
+  margin-left: 30px;
+  font-size: 25px;
+  font-weight: 200;
 }
 
 .header h3 {
@@ -113,11 +112,6 @@ header a {
   margin-right: 50px;
   font-size: 16px;
   font-weight: 400;
-}
-
-header a {
-  padding-top: 20px;
-  font-weight: 200;
 }
 
 .vote {
@@ -192,6 +186,7 @@ form label {
 header h1 {
   font-size: 1em;
   padding-top: 20px;
+  margin-left: 30px;
   font-weight: 200 !important;
 }
 
@@ -207,11 +202,11 @@ main {
   cursor: pointer;
   text-decoration: none;
   color: #fff;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 200;
   transition: color 0.1s;
   margin-left: 16px;
-  margin-right: 20px;
+  margin-right: 50px;
 }
 
 .btn-no-style:hover {
@@ -285,7 +280,7 @@ main {
 }
 
 footer {
-  background-color: #333;
+  background-color: #e74716;
   color: white;
   border-top: 1px solid #ccc;
   display: flex;
