--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,7 +3,7 @@
   <head>
     <meta charset='UTF-8' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0' />
-    <title>Pet Beauty Pageant</title>
+    <title>Pawfect</title>
     <link rel='stylesheet' href='/styles/style.css' />
     <script
       src='https://kit.fontawesome.com/c663089620.js'
