--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -51,7 +51,6 @@ h1 {
   font-weight: 200;
   display: inline-block;
   margin-top: 5px;
-  margin-bottom: 40px;
 }
 
 img {
@@ -67,16 +66,25 @@ img {
   font-weight: 300;
   text-align: center;
   position: relative;
-  top: 110px;
+  top: 90px;
   text-shadow: 2px 2px #ae3fb9;
 }
 
-.nav-bar {
-  margin-top: -60 !important;
+nav {
+  display: flex;
+  justify-content: space-between;
+  margin: 15px;
+  padding: 20px;
+  align-items: flex-start;
 }
 
-.header nav a {
-  margin-right: 60px;
+header a {
+  font-size: 25px;
+  text-shadow: 2px 2px #ae3fb9;
+}
+
+header h1 {
+  margin-top: 0px;
 }
 
 .post {
@@ -89,13 +97,10 @@ img {
 
 header {
   border-bottom: 1px solid #ccc;
-  display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 0 1%;
   margin-bottom: 50px;
   text-align: center;
-  font-size: 14px;
+  font-size: 16px;
   padding: 0px 0 150px;
   background-image: url('../images/chi-wow-wow.jpg');
   background-position: center;
@@ -105,11 +110,7 @@ header {
 
 header a {
   color: white;
-  margin: 20px;
-  margin-left: 30px;
-  font-size: 25px;
   font-weight: 200;
-  text-shadow: 2px 2px #ae3fb9;
 }
 
 .header h3 {
@@ -189,10 +190,7 @@ form label {
 }
 
 header h1 {
-  font-size: 1em;
-  padding-top: 20px;
-  margin-left: 30px;
-  font-weight: 200 !important;
+  font-weight: 200;
 }
 
 main {
@@ -211,7 +209,7 @@ main {
   font-weight: 200;
   transition: color 0.1s;
   margin-left: 16px;
-  margin-right: 50px;
+  margin-right: 20px;
 }
 
 .btn-no-style:hover {
@@ -249,13 +247,13 @@ main {
   transition: background-color 0.1s;
 }
 
-#vote-btn {
+/* #vote-btn {
   padding: 12px 20px 11px 20px;
   color: white;
   font-size: 12px;
   margin-right: 20px;
   cursor: pointer;
-}
+} */
 
 .comment-form {
   margin-bottom: 5%;
@@ -285,7 +283,7 @@ main {
 }
 
 footer {
-  background-color: #e74716;
+  background-color: rgb(228, 17, 17);
   color: white;
   border-top: 1px solid #ccc;
   display: flex;
@@ -312,19 +310,17 @@ footer {
     font-size: 25px;
   }
 
-  .title {
+  #title {
     display: flex;
     flex-direction: column;
+    font-size: 40px;
   }
 
   .comment-by {
     display: none;
   }
 
-  #vote-btn {
-    font-size: 20px;
-    padding: 17px 5px 0px 16px;
-    margin-right: 30px;
-    margin-bottom: 10px;
+  button {
+    padding: 3%;
   }
 }
