--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,3 +1,4 @@
+/* general style */
 * {
   box-sizing: border-box;
 }
@@ -22,6 +23,7 @@ a:hover {
   color: #a71db3;
 }
 
+/* all button style */
 button {
   background-color: #ae3fb9;
   border: 0;
@@ -37,6 +39,7 @@ button:hover {
   background-color: #be6bc6;
 }
 
+/* post list on home page */
 .post-list {
   margin: 0;
   padding: 0;
@@ -53,13 +56,7 @@ h1 {
   margin-top: 5px;
 }
 
-img {
-  height: 200px;
-  width: 200px;
-  margin-right: 30px;
-  border-radius: 10px;
-}
-
+/* hero and navigation */
 #title {
   font-size: 70px;
   color: white;
@@ -85,14 +82,7 @@ header a {
 
 header h1 {
   margin-top: 0px;
-}
-
-.post {
-  display: flex;
-  line-height: 150%;
-  align-content: space-between;
-  margin: auto;
-  margin-bottom: 50px;
+  font-weight: 200;
 }
 
 header {
@@ -118,6 +108,22 @@ header a {
   margin-right: 50px;
   font-size: 16px;
   font-weight: 400;
+}
+
+/* post style */
+.post {
+  display: flex;
+  line-height: 150%;
+  align-content: space-between;
+  margin: auto;
+  margin-bottom: 50px;
+}
+
+img {
+  height: 200px;
+  width: 200px;
+  margin-right: 30px;
+  border-radius: 10px;
 }
 
 .vote {
@@ -153,6 +159,7 @@ header a {
   background-color: #be6bc6;
 }
 
+/* comment */
 textarea,
 input {
   padding: 0.5%;
@@ -187,10 +194,6 @@ form label {
   margin: 0 auto;
   display: flex;
   flex-direction: column;
-}
-
-header h1 {
-  font-weight: 200;
 }
 
 main {
@@ -247,14 +250,6 @@ main {
   transition: background-color 0.1s;
 }
 
-/* #vote-btn {
-  padding: 12px 20px 11px 20px;
-  color: white;
-  font-size: 12px;
-  margin-right: 20px;
-  cursor: pointer;
-} */
-
 .comment-form {
   margin-bottom: 5%;
 }
@@ -274,6 +269,7 @@ main {
   opacity: 0.6;
 }
 
+/* create and edit post */
 .new-post-form input {
   width: 300px;
 }
@@ -282,6 +278,7 @@ main {
   margin-bottom: 5%;
 }
 
+/* footer */
 footer {
   background-color: rgb(228, 17, 17);
   color: white;
@@ -292,6 +289,7 @@ footer {
   font-size: 110%;
 }
 
+/* mobile responsiveness */
 @media only screen and (max-width: 600px) {
   .post {
     width: 100%;
